Fix exchange title overflow, language modal closing issue

--- a/src/components/site/LanguageModal/LanguageModal.less
+++ b/src/components/site/LanguageModal/LanguageModal.less
@@ -1,3 +1,11 @@
+.LanguageModal {
+  .Modal__box {
+    max-height: 400px;
+    overflow-y: scroll;
+  }
+}
+
+
 .LanguageModal__cont {
   padding: 20px;
   
